--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ server.port=8082
 #change base url
 server.servlet.context-path=/api/v1
 
-spring.profiles.default=git-pod
+spring.profiles.default=dev
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=123456
 
 #hinbernate
 spring.jpa.database=mysql
@@ -16,18 +16,18 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
 #spring.jpa.properties.hibernate.hbm2ddl.import_files=data.sql, data2.sql, bac-luong.sql
-# spring.sql.init.mode=always
 spring.sql.init.mode=embedded
 #spring.sql.init.data-locations=data.sql, data2.sql, bac-luong.sql
+#luôn show giá tr? null
 
-# spring.jackson.default-property-inclusion=always
+#spring.jackson.default-property-inclusion=always
 logging.level.org.springframework.security=DEBUG
 
 #send main
-# spring.mail.host=smtp.gmail.com
-# spring.mail.port=587
-# spring.mail.username=hentaiktvn321@gmail.com
-# spring.mail.password=kshjuungovoianlv
-# spring.mail.properties.mail.smtp.auth=true
-# spring.mail.properties.mail.smtp.starttls.enable=true
-# spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hentaiktvn321@gmail.com
+spring.mail.password=kshjuungovoianlv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
