--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8082
 server.servlet.context-path=/api/v1
 
 spring.profiles.default=dev
+spring.profiles.active=
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu
 spring.datasource.username=root
