--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,10 +23,10 @@ spring.sql.init.mode=never
 logging.level.org.springframework.security=DEBUG
 
 #send main
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=hentaiktvn321@gmail.com
-#spring.mail.password=kshjuungovoianlv
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
-#spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hentaiktvn321@gmail.com
+spring.mail.password=kshjuungovoianlv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
