add moi quan he, modify quan_he_gia_dinh, kien_thuc_an_ninh_quoc_phong, ngoai_ngu, tin_hoc v.v

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ spring.datasource.password=123456
 #hinbernate
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 #luôn show giá tr? null
 
 #spring.jackson.default-property-inclusion=always
