--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ server.servlet.context-path=/api/v1
 spring.profiles.default=dev
 spring.profiles.active=
 
+springdoc.api-docs.path=/api-docs
+
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu
 spring.datasource.username=root
 spring.datasource.password=123456
