Loai > Nhom > HeSoLuong > Ngach has CRUD, add devtools, can reloadlive by use ctrl+f9

--- a/src/main/resources/application-gitpod.yaml
+++ b/src/main/resources/application-gitpod.yaml
@@ -1,9 +1,13 @@
 server:
   port: 8082
 
+springdoc:
+  api-docs:
+    path: /api-docs
+
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu
+    url: jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu?createDatabaseIfNotExist=true
     username: root
     password:
   jpa:
