--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,24 @@
 server.port=8082
-
 #change base url
 server.servlet.context-path=/api/v1
-
+#banner
 spring.profiles.default=dev
 spring.profiles.active=
-
+#swagger
 springdoc.api-docs.path=/api-docs
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quan_ly_nhan_vien_chinh_phu?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
-
 #hinbernate
 spring.jpa.database=mysql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 #luôn show giá tr? null
-
 #spring.jackson.default-property-inclusion=always
-logging.level.org.springframework.security=DEBUG
-
+logging.level.org.springframework.security=debug
 #send main
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
